--- a/index.html
+++ b/index.html
@@ -6,17 +6,42 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat|Roboto+Condensed&display=swap" rel="stylesheet">  
+    <link href="https://fonts.googleapis.com/css?family=Montserrat|Roboto+Condensed&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <title>AR</title>
 </head>
 <body>
-    <ul>
-        <li>About</li>
-        <li>Portfolio</li>
-        <li>Skills</li>
-    </ul> 
-    <header>Amalia Rodríguez</header>
-    <section>Contact</section>
+    <div class="mainContainer">
+        <h1>Amalia <br> Rodríguez</h1>
+        <h2>Junior Front-End Web Developer</h2>
+        <div class="about">
+            <h3>About</h3>  
+            <p>After working for several years as a performer,
+                    curiosity in digital arts dragged me into
+                    technologies. So in January 2019 I decided to
+                    enroll myself in a web development boot-
+                    camp in order to reinvent my professional
+                    career. Since then, I have been coding,
+                    developing and learning: it's fun!</p>
+        </div>
+        <div class="portfolio">
+            <h3>Portfolio</h3>
+            <h3>Contact</h3>
+            <p id="contactInfo">amaliarvm@gmail.com <br>
+                0467656808
+            </p>
+        </div>
+        <b class="line"></b>
+        <a class="linkOne" href="https://www.linkedin.com/in/amalia-rodriguez/">
+            <i class="fab fa-linkedin-in"></i>   
+        </a>
+        <a class="linkTwo" href="https://github.com/AmaliaRVM">
+            <i class="fab fa-github"></i>
+        </a>
 
+        
+        
+
+    </div>
 </body>
 </html>
